--- a/brackets/index.html
+++ b/brackets/index.html
@@ -6,12 +6,11 @@
 </head>
 <body>
     <div>
-        <h1>
-            <p>
-                Esto es una prueba
-            </p>
+        <h1>Hola </h1>
+        <p>
+            Esto es una prueba
+        </p>
             
-        </h1>
     </div>
 </body>
 </html>
