cambios al header title
cambio al h1 y header

--- a/brackets/index.html
+++ b/brackets/index.html
@@ -2,15 +2,14 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Esto es una prueba</title>
+    <title>Esto es una prueba git y html5</title>
 </head>
 <body>
     <div>
-        <h1>Hola </h1>
+        <h1>Hola Mundo</h1>
         <p>
             Esto es una prueba
         </p>
-            
     </div>
 </body>
 </html>
